# gitd

./: Makefile  Makefile.am  README.md  README.org  autogen.sh  configure.ac  default.conf  gitd.8  gitd.c  gitd.conf  gitd.conf.in  gitd.conf.in.in  gitd.man  gitd.service.in
man/: gitd.8
src/: env.c  git.c  gitd.c  gitd.h  input.c  log.c  main.c  settings.c  settings.h  util.c
